# symcrust

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  c.yaml  rust-toolchain
.devcontainer/: README.md  devcontainer.json  setup.sh
Symcrust/: Symcrust.lean
c/: CMakeLists.txt  Eurydice.h  common_shims.c  hash_shims.c  hash_shims.h  mlkem_shims.c  symcrust.c  symcrust.h  symcrust_common.c  symcrust_common.h  symcrust_ffi.c  symcrust_ffi.h  symcrust_mlkem.c  symcrust_mlkem.h  test.c
c/internal/: symcrust_common.h  symcrust_ffi.h  symcrust_hash.h  symcrust_mlkem.h
misc/: CMakeLists.txt  test-symcrypt.c
proofs/: Symcrust.lean  lake-manifest.json  lakefile.lean  lean-toolchain
proofs/Symcrust/: Arith.lean  BarrettReduction.lean  Brute.lean  Bug.lean  DivRange.lean  Extract.lean  Funs.lean  FunsExternal.lean  FunsExternal_Template.lean  MontReduction.lean  MulRange.lean  NatBit.lean  Properties.lean  RangeNotations.lean  SRRange.lean  Spec.lean  SpecAux.lean  Types.lean  While.lean
proofs/Symcrust/Brute/: Brute.lean  Brute2.lean  Brute2Tests.lean  BruteLemmas.lean  BruteLemmas2.lean  BruteLemmasOld.lean  BruteOld.lean  BruteProofExamples.lean  BruteTests.lean
proofs/Symcrust/Code/: Funs.lean  FunsExternal.lean  FunsExternal_Template.lean  Types.lean  TypesExternal.lean  TypesExternal_Template.lean
proofs/Symcrust/DivRange/: Basic.lean  Lemmas.lean  Notations.lean
proofs/Symcrust/MulRange/: Basic.lean  Lemmas.lean  Notations.lean
proofs/Symcrust/Properties/: BarrettReduction.lean  Basic.lean  Brute.lean  BruteLemmas.lean  Coinflip4.lean  Compress.lean  CompressEncode.lean  CompressEncodeSpecAux.lean  CompressSpecAux.lean  DecodeDecompress.lean  DecodeDecompressSpecAux.lean  MontReduction.lean  NormMod.lean  Ntt.lean  NttSpecAux.lean  Polynomials.lean  SampleNTTSpecAux.lean  SamplePolyCBDSpecAux.lean  SpecAux.lean  While.lean
proofs/Symcrust/Properties/BitsAndBytes/: BitsToBytes.lean  BytesToBits.lean
proofs/Symcrust/Properties/CompressEncode/: Compress.lean  CompressEncode.lean  StreamEncode.lean  TargetEncode.lean
proofs/Symcrust/Properties/DecodeDecompress/: DecodeDecompress.lean  Decompress.lean  HelperLemmas.lean  StreamDecode.lean  TargetDecode.lean
proofs/Symcrust/Properties/Ntt/: BarrettReduction.lean  MontReduction.lean  Ntt.lean  NttSpecAux.lean
proofs/Symcrust/Properties/SampleNTT/: SampleNTTSpecAux.lean  Temp.lean
proofs/Symcrust/Properties/SamplePolyCBD/: SamplePolyCBD.lean  Target2Code.lean  Target2Eta2Proofs.lean  Target2Eta3Proofs.lean  Target2HelperLemmas.lean  Target2Proof.lean  Target2SamplePolyCBD.lean  TargetSamplePolyCBD.lean
proofs/Symcrust/SRRange/: Basic.lean  Lemmas.lean  Notations.lean
proofs/Symcrust/Spec/: AES.lean  FrodoSpec.lean  NatBit.lean  NttEquiv.lean  NttEquivGeneral.lean  Round.lean  Sha3.lean  Sha3Utils.lean  Sha3XOF.lean  Spec.lean  Test.lean  Utils.lean  XOF-for-sha3.lean
proofs/Symcrust/While/: While.lean
src/: ALLOCATIONS.md  alloc.rs  common.rs  error.rs  ffi.rs  hash.rs  key.rs  lib.rs  misc.rs  mlkem.rs  ntt.rs  sha3.rs  sha3_224.rs  sha3_256.rs  sha3_384.rs  sha3_512.rs  shake.rs  symcrypt.rs  symcrypt_internal.rs  test.rs
