[package]
name = "symcrust"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
hex = "0.4"
itertools = "0.14.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
# TODO: try "fat" (with quotes) instead of true
lto = true
codegen-units = 1
debug = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(eurydice)',
] }
